--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
         </svg>
       </a>
     </main>
-
+    <audio autoplay loop>
+      <source src="./sea.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
     <script src="./main.js"></script>
   </body>
 </html>
