--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </a>
     </main>
     <audio autoplay loop>
-      <source src="./sea.mp3" type="audio/mpeg">
+      <source src="sea.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
     <script src="./main.js"></script>
